<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>insureon</groupId>
	<artifactId>insureon</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Insureon</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		
		<!-- All the dynamic properties that can be used at run time -->
		<tag>@test</tag>
		<log_level>INFO</log_level>
		
		
		<spring.version>3.2.2.RELEASE</spring.version>
		<spring.amqp.version>1.1.3.RELEASE</spring.amqp.version>
		
		<!-- Supported Firefox version for 2.47.1 is 40 -->
		<selenium.version>2.47.1</selenium.version>
		
		<slf4j.version>1.7.2</slf4j.version>
		<mono_output>--no-monochrome</mono_output>
		<xmlunit.version>1.1</xmlunit.version>
		
	</properties>

	<dependencies>
	
	
			<!-- Cucumber -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.2.4</version>
		</dependency>
		
	
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.2.3</version>
		</dependency>

		
	
		<!-- Selenium -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		
		<dependency>
        	<groupId>org.seleniumhq.selenium</groupId>
        	<artifactId>selenium-firefox-driver</artifactId>
        	<version>${selenium.version}</version>
    	</dependency> 
    	
    	<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>${selenium.version}</version>
		</dependency>
	
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-api</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		
	
		
		<!-- Junit / TestNG -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
		</dependency>

		
		<!--APACHE -->	
		<dependency>
	        <groupId>org.apache.httpcomponents</groupId>
	        <artifactId>httpcore</artifactId>
	        <version>4.3.3</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.3.5</version>
		</dependency>
		
		

		<!-- Commons -->
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		
		
		
		<!--slf4j dependency for logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
	
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
	
		<!--log4j dependency -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
			<scope>compile</scope>
		</dependency>
		
		
		
		<!--SPRING -->	
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		
		
	</dependencies>
	
	
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<outputDirectory>target/classes</outputDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<testOutputDirectory>target/classes</testOutputDirectory>
		<resources>
			<resource>
				<filtering>true</filtering>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*.properties</include>
				</includes>
				<targetPath>./</targetPath>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<fork>true</fork>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		
			
			<!-- TESTNG/JUNIT configuration -->  
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.2</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
		         <groupId>org.apache.maven.plugins</groupId>
		         <artifactId>maven-surefire-plugin</artifactId>
		         <version>2.16</version>
		         <executions>
                    <execution>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
              
                <configuration>
                 <suiteXmlFiles>
                 	<suiteXmlFile></suiteXmlFile>
                 </suiteXmlFiles>
                	<skipTests>true</skipTests>
                </configuration>
		      
		      </plugin>
		    
		    
		    <!-- Cucumber configuration -->   
		    <plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.2.1</version>
				
				<executions>
					<execution>
						<phase>test</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<mainClass>cucumber.jvm.parallel.ReportMerger</mainClass>
							<executable>java</executable>
							
							<forkCount>${10}</forkCount>
							<reuseForks>false</reuseForks>
							
							
							<arguments>
								<argument>-Xms512M</argument>
								<argument>-Xmx512M</argument>
								<argument>-XX:MaxPermSize=512M</argument>

								<argument>-classpath</argument>
								<classpath/>

								<argument>cucumber.api.cli.Main</argument>
								<argument>src/test/resources/example/</argument>

								<argument>--glue</argument>
								<argument>example</argument>

								<argument>--tags</argument>
								<argument>${tag}</argument>
								
								<argument>--format</argument>
								<argument>com.ins.logger.CucumberFormatter</argument>
								<argument>${mono_output}</argument>

								<argument>--format</argument>
								<argument>json:./target/cucumber.json</argument>
								
								<argument>--format</argument>
								<argument>html:target/site/cucumber-pretty</argument>
									
								<argument>--format</argument>
								<argument>html:./report_html</argument>

							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
			
		</plugins>
	</build>
</project>
